--- a/About.html
+++ b/About.html
@@ -18,8 +18,8 @@
 			</nav>
 		</header>
 
-		<p>My name is <em>James</em><br></p>
-		<p>My name is <em>James</em><br></p>
+		<p>My name is <em>Ali</em><br></p>
+		<p>My name is <em>Ali</em><br></p>
 		
 		<ol>
 			<li>number 1</li>
@@ -27,6 +27,6 @@
 			<li>number 3</li>
 		</ol>
 
-		<footer>© James Wei, 2019</footer>
+		<footer>© Ali Zaidi, 2019</footer>
 	</body>
 </html>
