--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>JAMES</title>
+		<title>Zaidi</title>
 		<link rel="stylesheet" type="text/css" href="main.css" />
 	</head>
 	<body>
@@ -12,7 +12,7 @@
 		<div id = "main">
 			<header>
 				<nav>
-					<h1><font size="+10"><strong>JAMES</strong></font></h1>
+					<h1><font size="+10"><strong>James</strong></font></h1>
 					<h2><font size="+10"><em>Wei</em></font></h2>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -43,7 +43,7 @@
 			<li>number 1</li>
 			<li>number 2</li>
 		</ol>
-		<footer>© James Wei, 2019</footer>
+		<footer>© Ali Zaidi, 2019</footer>
 
 		<script>
 		function openNav() {
